<resources>
    <string name="app_name">SmartFarm</string>

    <!--Drawer Menus-->
    <string name="logout">Logout</string>

    <!--Login-->
    <string name="login_dummy">Login</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="noAccount">Non hai un account? </string>
    <string name="registrati"><u><b>Registrati</b></u></string>

    <!--Registrazione-->
    <string name="registrazione">Registrazione</string>
    <string name="ripetiPassword">Ripeti Password</string>
    <string name="analista">Analista</string>
    <string name="dipendente">Dipendente</string>
    <string name="RegistratiButton">Registrati</string>

    <!--Login Validation-->
    <string name="empty_email">Inserisci un email non vuota.</string>
    <string name="formato_errato">Formato errato email</string>
    <string name="invalid_emailPassword">Email o password errati.</string>
    <string name="email_not_found">Email non trovata</string>
    <string name="empty_password">Inserisci una password non vuota.</string>
    <string name="empty_password2">Ripeti la password.</string>
    <string name="account_esistente">Account già esistente.</string>
    <string name="password_diverse">Le password inserite non corrispondono.</string>
    <string name="accedi">Login</string>

    <!--Homepage Valori-->
    <string name="storico">Storico Colture</string>
    <string name="colture">Piano Colture</string>
    <string name="pianifica">Pianifica Coltura</string>
    <string name="dosaggi">Gestione Dosaggi</string>
    <string name="analisi">Analisi Dati</string>

    <!--Storico Valori-->
    <string name="prodotti">Prodotti</string>
    <string name="quantità">Quantità</string>
    <string name="stagione">Stagione: </string>

    <!--Logout-->
    <string name="logout_prompt">Vuoi effettuare il logout?</string>
    <string name="si">Conferma</string>
    <string name="no">Annulla</string>

    <!--HomePage-->
    <string name="home">Benvenuti in SmartFarm</string>
    <string name="title_activity_home_page">HomePage</string>

    <!--Pianifica-->
    <string name="nome_coltura">Coltura n° -</string>
    <string name="ettari">N° Ettari</string>
    <string name="data">Seleziona Data Semina</string>
    <string name="resa">Resa Stimata (t/ha)</string>
    <string name="aggiungi_coltura">Aggiungi</string>
    <string name="chiave_vuota">Inserisci il nome della coltura</string>
    <string name="prodotto_vuoto">Inserisci il tipo di coltivazione</string>
    <string name="ettari_vuoto">Inserisci gli ettari da coltivare</string>
    <string name="data_non_valida">Data non valida</string>
    <string name="resa_vuoto">Inserisci la resa attesa</string>

    <!--Dosaggio-->
    <string name="insetticida">Quantità Insetticida</string>
    <string name="concime">Quantità Concime</string>
    <string name="acqua">Quantità Acqua</string>
    <string name="ml">ml/m²</string>
    <string name="mg">mg/m²</string>
    <string name="l">l/m²</string>
    <string name="modifica_dosaggi">Modifica Dosaggi</string>

    <!--Coltura-->
    <string name="prodotto">Prodotto</string>
    <string name="ettari_coltura">Ettari Coltura</string>
    <string name="data_semina">Data di Semina</string>
    <string name="elimina_coltura">Elimina Coltura</string>
    <string name="delete_prompt">Vuoi eliminare la Coltura?</string>

    <!--Analisi-->
    <string name="dati">Dati Rilevati</string>
    <string name="acidità">Acidità Suolo</string>
    <string name="umidità">Livello Umidità</string>
    <string name="precipitazioni">Probabilità Precipitazioni</string>
    <string name="temperatura">Temperatura</string>
    <string name="storicoTemperature">Storico Temperature</string>

    <!--SharedPreferences-->
    <string name="file_utenti">utenti</string>
    <string name="file_colture">colture</string>
    <string name="file_dosaggi">dosaggi</string>
</resources>
