<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePage"
    android:background="@drawable/sfondo">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:layout_margin="15dp"
            android:paddingBottom="25dp">

            <TextView
                style="@style/TextStyle.Heading"
                android:id="@+id/tvTitolo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="15dp"
                android:text="@string/home"
                android:textColor="@color/colorGreenDark"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvTitolo"
                android:layout_centerInParent="true"
                android:id="@+id/ll1"
                android:padding="2dp">

                <Button
                    android:id="@+id/btn_storico"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:layout_margin="9dp"
                    android:padding="5dp"
                    android:background="@drawable/button_primary_bg"
                    android:fontFamily="@font/opensans_bold"
                    android:onClick="storicoCliccato"
                    android:text="@string/storico"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/btn_colture"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:layout_margin="9dp"
                    android:padding="5dp"
                    android:background="@drawable/button_primary_bg"
                    android:fontFamily="@font/opensans_bold"
                    android:onClick="coltureCliccato"
                    android:text="@string/colture"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll1"
                android:layout_centerInParent="true"
                android:id="@+id/ll2"
                android:padding="2dp">

                <Button
                    android:id="@+id/btn_pianifica"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:layout_margin="9dp"
                    android:padding="5dp"
                    android:background="@drawable/button_primary_bg"
                    android:fontFamily="@font/opensans_bold"
                    android:onClick="pianificaCliccato"
                    android:text="@string/pianifica"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/btn_dosaggi"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:layout_margin="9dp"
                    android:padding="5dp"
                    android:background="@drawable/button_primary_bg"
                    android:fontFamily="@font/opensans_bold"
                    android:onClick="dosaggiCliccato"
                    android:text="@string/dosaggi"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll2"
                android:layout_centerInParent="true"
                android:id="@+id/ll3"
                android:padding="2dp">

                <Button
                    android:id="@+id/btn_analisi"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:layout_margin="9dp"
                    android:padding="5dp"
                    android:background="@drawable/button_primary_bg"
                    android:fontFamily="@font/opensans_bold"
                    android:onClick="analisiCliccato"
                    android:text="@string/analisi"
                    android:textColor="@color/black" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        app:menu="@menu/bottom_nav"
        android:background="@drawable/bottom_bar"
        app:itemIconTint="@color/black_effective"
        app:itemTextColor="@color/black_effective" />
</RelativeLayout>