<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registrazione"
    android:background="@drawable/sfondo">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_centerVertical="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="22dp"
        android:id="@+id/card">

        <TextView
            style="@style/TextStyle.Heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_marginTop="20dp"
            android:text="@string/registrazione"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical"
            android:id="@+id/linearLayout">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/gray"
                app:hintTextAppearance="@style/TextStyle"
                android:background="@drawable/edittext"
                android:id="@+id/tInputEmail"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email"
                    style="@style/TextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/input_border_bottom"
                    android:cursorVisible="true"
                    android:gravity="center|start|bottom"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLength="50"
                    android:paddingTop="5dp"
                    android:paddingBottom="10dp"
                    android:textSize="16sp"
                    android:drawableLeft="@drawable/ic_outline_account_circle_24"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColorHint="@color/gray"
                app:hintTextAppearance="@style/TextStyle"
                app:passwordToggleEnabled="false"
                android:background="@drawable/edittext"
                android:id="@+id/tInputPassword">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    style="@style/TextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/input_border_bottom"
                    android:cursorVisible="true"
                    android:gravity="center|start|bottom"
                    android:inputType="textPassword"
                    android:maxLength="50"
                    android:paddingTop="5dp"
                    android:paddingBottom="10dp"
                    android:textColor="@color/black_effective"
                    android:textSize="16sp"
                    android:drawableLeft="@drawable/ic_outline_lock_24"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ripetiPassword"
                android:textColorHint="@color/gray"
                app:hintTextAppearance="@style/TextStyle"
                app:passwordToggleEnabled="false"
                android:background="@drawable/edittext"
                android:id="@+id/tInputPasswordRipeti">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_Ripetipassword"
                    style="@style/TextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/input_border_bottom"
                    android:cursorVisible="true"
                    android:gravity="center|start|bottom"
                    android:inputType="textPassword"
                    android:maxLength="50"
                    android:paddingTop="5dp"
                    android:paddingBottom="10dp"
                    android:textColor="@color/black_effective"
                    android:textSize="16sp"
                    android:drawableLeft="@drawable/ic_outline_lock_24"/>
            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/radio_group"
                android:checkedButton="@id/radio_dipendente"
                android:layout_marginTop="10dp">

                <RadioButton android:id="@+id/radio_analista"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextStyle"
                    android:text="@string/analista"
                    android:textSize="18sp"
                    android:layout_gravity="center"
                />
                <RadioButton android:id="@+id/radio_dipendente"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextStyle"
                    android:text="@string/dipendente"
                    android:textSize="18sp"
                    android:layout_gravity="center"
                />
            </RadioGroup>

            <Button
                android:id="@+id/btn_server_login"
                style="@style/Button.Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:paddingLeft="70dp"
                android:paddingRight="70dp"
                android:text="@string/RegistratiButton"
                android:onClick="registra"
                android:fontFamily="@font/opensans_bold"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>